<resources>
    <string name="app_name">M Commerce Admin App</string>
    <string name="products">Products</string>
    <string name="vendor">Vendor</string>
    <string name="quantity">Quantity</string>
    <string name="title">Title</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="choose_image">Choose Image</string>
    <string name="product_type">Product Type</string>

    <string name="see">See</string>
    <string name="desc">Desc</string>
    <string name="inventory">Inventory</string>
    <string name="variants">Variants</string>
    <string name="discount">Discount</string>
    <string name="searching_for_network_connection">Searching for network connection</string>
    <string name="review">Review</string>
    <string name="product_title">Product Title</string>
    <string name="logout">Logout</string>
    <string name="price_rule">Price Rule</string>
    <string name="discount_codes">Discount Codes</string>
    <string name="discount_code">Discount Code :</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>