<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/productsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:background="@drawable/card_border"
        android:paddingHorizontal="30dp"
        android:text="@string/products"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/discountsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_border"
        android:paddingHorizontal="30dp"
        android:text="@string/discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productsBtn">

    </Button>

    <Button
        android:id="@+id/inventoryBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_border"
        android:paddingHorizontal="30dp"
        android:text="@string/inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discountsBtn">

    </Button>


    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_border"
        android:paddingHorizontal="30dp"
        android:text="@string/logout"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>