<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.products.all_products.view.add_product.AddNewProductActivity">


    <ProgressBar
        android:id="@+id/loading_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/back_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/back_image"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/chooseImage_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:text="@string/choose_image"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/product_title"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/product_image"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vendor_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/vendor"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vendor_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/product_type"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/vendor_layout"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productType_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/description"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/type_layout"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/desc_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:gravity="top|start"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/size_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/size"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/desc_layout"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/size_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/color_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/color"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/size_layout"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/color_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/blue_dark"
                android:hint="@string/price"
                app:hintTextColor="@color/blue_dark"
                app:layout_constraintTop_toBottomOf="@id/color_layout"
                tools:layout_editor_absoluteX="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/blue_dark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/submit"
                android:layout_marginTop="20dp"
                android:background="@drawable/card_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_layout"
                app:layout_constraintHorizontal_bias="0.597"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>