<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="0sp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">


        <TextView
            android:id="@+id/title_TextView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@id/title_TextView" />

        <TextView
            android:id="@+id/vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/vendor"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/vendor_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Canada"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@id/vendor"
            app:layout_constraintTop_toTopOf="@id/vendor" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@+id/vendor" />

        <EditText
            android:id="@+id/quantity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="23.0"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@id/quantity"
            app:layout_constraintTop_toTopOf="@id/quantity" />

        <ImageButton
            android:id="@+id/plus_bt"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_plus_circle"
            app:layout_constraintStart_toEndOf="@id/quantity_textView"
            app:layout_constraintTop_toTopOf="@id/quantity" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>