<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_product_detail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/ProductPriceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="20.0"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ProductRating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/ProductPriceTxt"
            app:layout_constraintTop_toBottomOf="@+id/ProductPriceTxt" />



        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/ProductRating"
            app:layout_constraintTop_toBottomOf="@id/ProductRating" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sizeRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/text"
            tools:listitem="@layout/card_size" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/color"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/sizeRecycleView"
            app:layout_constraintTop_toBottomOf="@id/sizeRecycleView" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/text1"
            app:layout_constraintTop_toBottomOf="@id/text1"
            tools:listitem="@layout/card_size" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/colorRecycleView"
            app:layout_constraintTop_toBottomOf="@id/colorRecycleView" />

        <kr.co.prnd.readmore.ReadMoreTextView
            android:id="@+id/readMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:readMoreColor="@color/black"
            android:textSize="17sp"
            android:textColor="@color/black"
            app:readMoreMaxLine="2"
            app:readMoreText="                     See more"
            app:layout_constraintStart_toStartOf="@id/text2"
            app:layout_constraintTop_toBottomOf="@id/text2"/>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/layout1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="@id/readMore"
           app:layout_constraintTop_toBottomOf="@id/readMore">

           <include layout="@layout/card_review"
               android:id="@+id/card1"/>
       </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/layout1"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <include layout="@layout/card_review"
                android:id="@+id/card2"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/reviewSeeMoreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>