<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="20dp"
    app:cardCornerRadius="40sp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/title_TextView"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="@id/product_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@id/title_TextView"
            />

        <TextView
            android:id="@+id/vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendor"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="@id/title_TextView"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/vendor_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/vendor"
            app:layout_constraintTop_toTopOf="@id/vendor"
            android:text="Canada"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            />

        <TextView
            android:id="@+id/variants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/variants"
            app:layout_constraintTop_toBottomOf="@+id/vendor"
            app:layout_constraintStart_toStartOf="@id/title_TextView"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/variants_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23.0"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/variants"
            app:layout_constraintTop_toTopOf="@id/variants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            />


        <ImageView
            android:id="@+id/product_imageView"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inventory_child_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/variants"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>