<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="40sp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/title_TextView"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="@id/product_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@id/title_TextView" />

        <TextView
            android:id="@+id/vendor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/vendor"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/vendor_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Canada"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@id/vendor"
            app:layout_constraintTop_toTopOf="@id/vendor" />

        <TextView
            android:id="@+id/variants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/variants"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/title_TextView"
            app:layout_constraintTop_toBottomOf="@+id/vendor" />

        <TextView
            android:id="@+id/variants_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23.0"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toEndOf="@id/variants"
            app:layout_constraintTop_toTopOf="@id/variants" />

        <ImageView
            android:id="@+id/delete_address"
            android:layout_width="29dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:src="@drawable/delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/title_TextView"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="-5dp" />

        <ImageView
            android:id="@+id/product_imageView"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>